servlet intro project

--- a/ServletsJsp/src/main/webapp/WEB-INF/web.xml
+++ b/ServletsJsp/src/main/webapp/WEB-INF/web.xml
@@ -22,4 +22,16 @@
   	<url-pattern>/first</url-pattern>
   </servlet-mapping>
   
+  <!-- second servlet -->
+  
+  <servlet>
+  	<servlet-name>secondServlet</servlet-name>
+  	<servlet-class>com.servletsjsp.servlets.SecondServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>secondServlet</servlet-name>
+  	<url-pattern>/second</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
